# nexoedge-nfs

ncloud/: NOTE.md  ganesha.conf  install_service.sh  nfs-ganesha-lock.service  nfs-ganesha.service  test.sh
src/: CMakeLists.txt
src/FSAL/: CMakeLists.txt
src/FSAL/FSAL_MEM/: mem_handle.c
src/FSAL/FSAL_NCLOUD/: CMakeLists.txt  export.c  file.c  handle.c  main.c  ncloud_methods.c  ncloud_methods.h  xattrs.c
src/FSAL/FSAL_NCLOUD/ds/: rbtree.c  rbtree.h  rbtree_augmented.h
src/FSAL/FSAL_VFS/: state.c
src/cmake/modules/: FindNCLOUD.cmake
src/include/ncloud/: client.h  define.h
